# raytracer

./: .gitignore  CMakeLists.txt  README.md  run_cmake.sh  run_test.sh  unit_tests
config_files/: bis.cfg  main.cfg  main_ambient.cfg  main_directional.cfg  main_phong.cfg  scene_graph.cfg  test.cfg  testwithplane.cfg
core/: CMakeLists.txt
core/src/: ALight.cpp  ALight.hpp  AMaterial.cpp  AMaterial.hpp  ANode.cpp  ANode.hpp  AmbientLight.hpp  Camera.hpp  Color.hpp  Cone.hpp  Cylinder.hpp  DLLoader.hpp  Dielectric.hpp  DirectionalLight.hpp  EventCallbackWrapper.hpp  FlatColor.hpp  GeometryBase.hpp  Group.hpp  ILight.hpp  IMaterial.hpp  INode.hpp  Intersection.hpp  Interval.hpp  Lambertian.hpp  Light.hpp  LightFactory.hpp  LimitedCone.hpp  LimitedCylinder.hpp  Material.hpp  MaterialFactory.hpp  MathUtils.hpp  Matrix.cpp  Matrix.hpp  Metal.hpp  Parser.cpp  Parser.hpp  PhongReflectionModel.hpp  Plane.hpp  Point.cpp  Point.hpp  (+18 more)
plugins_src/: CMakeLists.txt
plugins_src/GUI/: CMakeLists.txt
plugins_src/GUI/abstract/: AGuiPlugin.cpp  AGuiPlugin.hpp
plugins_src/GUI/interface/: IEvent.hpp  IGuiPlugin.hpp
plugins_src/GUI/src/: SFMLGuiPlugin.cpp  SFMLGuiPlugin.hpp
plugins_src/interface/: IPlugin.hpp
tests/: CMakeLists.txt  unit_tests_geometryBase.cpp  unit_tests_matrice.cpp  unit_tests_matrice_1x3.cpp  unit_tests_matrice_1x4.cpp  unit_tests_matrice_3x3.cpp  unit_tests_matrice_4x1.cpp  unit_tests_matrice_4x4.cpp  unit_tests_points.cpp  unit_tests_vector.cpp
